feat(proxy): support cport password (#344)(#345)(#346)